fix label spacing

--- a/app/javascript/locations/src/css/styles.css
+++ b/app/javascript/locations/src/css/styles.css
@@ -21,6 +21,10 @@
   width: 100%;
 }
 
+.input-intro {
+  margin-bottom: 5%;
+}
+
 .url-entry {
   width: 80%;
 }
